# quwa

client/: .env.example  README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
client/docs/: jwt-integration.md
client/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
client/src/components/: AnimatedBlobs.tsx  ChatInterface.tsx  FileUpload.tsx  Header.tsx  MarkdownText.tsx  MessageBubble.tsx  SourceCitation.tsx  ThinkingProcess.tsx
client/src/lib/: appwrite.ts  mockChatService.ts
client/src/routes/: __root.tsx  index.tsx
client/src/routes/(auth)/: signin.tsx  signup.tsx
server/: .env.example  .gitignore  Cargo.toml  workflow.md
server/migrations/: 20260104_create_tables.sql  20260212_add_pgvector.sql
server/src/: auth.rs  chat.rs  health.rs  main.rs  orphanet_loader.rs  request_counter.rs
server/src/db/: mod.rs  models.rs  queries.rs
server/src/db_mongo/: mod.rs  models.rs  queries.rs
server/src/embeddings/: local_embeddings.rs  mod.rs
server/src/media_ingestion/: mod.rs  upload.rs  validation.rs
server/src/processing/: image.rs  mod.rs  orphanet.rs  pdf.rs
server/src/rag/: context_strategy.rs  inspect.rs  mod.rs  vector_store.rs
