[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework
axum = { version = "0.8.8", features = ["multipart", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
futures-util = "0.3.31"
futures = "0.3"
async-stream = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "uuid"] }

# AI Framework
rig-core = "0.27.0"

# Authentication
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }

# Environment
dotenvy = "0.15.7"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bytes = "1.5"
mime_guess = "2.0"

# File Processing
lopdf = "0.34"
image = "0.25"
quick-xml = "0.36"

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# Base64 encoding for images
base64 = "0.22"

# Local embeddings
fastembed = "4.4"
rig-mongodb = "0.3.6"
mongodb = "3.5.1"
